--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Simulador de gases</title>
 </head>
 <body>
-<div id="container"></div>
-<script data-main="main" src="bower_components/requirejs/require.js"></script>
+<div style="width: 100vw; height: 100vh" id="viewport"></div>
+<script data-main="main" src="vendor/requirejs/require.js"></script>
 </body>
 </html>
