Added bootstrap for extra sweetness

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Simulador de gases</title>
+    <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css">
 </head>
 <body>
-<div style="width: 100vw; height: 100vh" id="viewport"></div>
+<div style="width: 99vw; height: 99vh" id="viewport"></div>
 <script data-main="main" src="vendor/requirejs/require.js"></script>
 </body>
 </html>
