Intento de cambio
Cambio de prueba

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Simulador de gases</title>
+    <title>Simulador de gases - Ramiro Federico Lasorsa / Guido Contreras Woda</title>
     <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="vendor/c3/c3.min.css">
     <style>
