--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
             width: 400px;
             resize: horizontal;
             overflow-x: hidden;
+            max-width: 100%;
         }
     </style>
 </head>
